prawie dziala - dodac panel konca gry i napprawic latajace w miejscu kaczki